--- a/EQIQ/EQIQ.csproj
+++ b/EQIQ/EQIQ.csproj
@@ -34,11 +34,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Page2.cs" />
     <Compile Include="HomePage.cs" />
+    <Compile Include="Steps.xaml.cs">
+      <DependentUpon>Steps.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.4.6332\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.4.6332\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <ItemGroup>
     <EmbeddedResource Include="mando.jpg" />
+    <EmbeddedResource Include="Steps.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
